--- a/scss/base/_header.scss
+++ b/scss/base/_header.scss
@@ -52,6 +52,7 @@
             padding-left: 0;
           }
           &:last-child {
+            padding-right: 0px;
             border-right: none;
           }
         }
